--- a/chooser/src/main/res/layout/activity_photo_chooser.xml
+++ b/chooser/src/main/res/layout/activity_photo_chooser.xml
@@ -126,16 +126,16 @@
             <!--android:layout_toRightOf="@+id/tv_select_dir"-->
             <!--android:background="@drawable/apa"/>-->
 
-        <CheckBox
-            android:id="@+id/rb_yuantu"
-            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:drawablePadding="5dp"
-            android:text="@string/a_photo_yuantu_text"
-            android:textColor="@color/a_photo_isyuantu_color"
-            android:textSize="16sp"/>
+        <!--<CheckBox-->
+            <!--android:id="@+id/rb_yuantu"-->
+            <!--style="@style/Widget.AppCompat.CompoundButton.RadioButton"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:drawablePadding="5dp"-->
+            <!--android:text="@string/a_photo_yuantu_text"-->
+            <!--android:textColor="@color/a_photo_isyuantu_color"-->
+            <!--android:textSize="16sp"/>-->
 
         <CheckedTextView
             android:id="@+id/ctv_look"
